objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>if( ISBLANK(Phone),&quot;--&quot;,
 
if( CONTAINS(&quot;907:206:209:213:253:310:323:360:408:415:424:425:442:458:503:509:510:530:541:559:562:619:626:650:657:661:669:702:707:714:725:747:760:775:805:818:831:858:909:916:925:949:951:971&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;Pacific&quot;,
 
if(
CONTAINS(&quot;208:250:303:307:385:403:406:435:480:505:520:602:623:719:720:780:801:928:970:403:587:780&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;Mountain&quot;,
 
if(
CONTAINS(&quot;809:205:210:214:217:218:219:224:225:228:251:254:256:262:270:281:308:309:312:314:316:318:319:320:325:331:334:337:346:361:364:402:405:409:414:417:430:432:469:479:501:504:507:512:515:531:534:539:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:701:708:712:713:715:731:737:763:769:773:779:785:806:815:816:817:830:832:847:850:870:872:901:903:913:918:920:931:936:938:940:952:956:972:979:985&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;Central&quot;,
 
if(
CONTAINS(&quot;201:202:203:207:212:215:216:229:231:234:239:240:248:252:260:267:269:272:276:301:302:304:305:313:315:317:321:330:336:339:347:351:352:386:401:404:407:410:412:413:419:423:434:440:443:470:475:478:484:502:508:513:516:517:518:540:551:561:567:570:571:574:585:586:603:606:607:609:610:614:616:617:631:646:667:678:681:703:704:706:716:717:718:724:727:732:734:740:754:757:762:765:770:772:774:781:786:802:803:804:810:812:813:814:828:843:845:848:856:857:859:860:862:863:864:865:878:904:906:908:910:912:914:917:919:929:937:941:947:954:959:973:978:980:984:989&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;Eastern&quot;,
 
if(
CONTAINS(&quot;506:709:902&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;Atlantic&quot;,
 
if(
CONTAINS(&quot;456:500:533:544:566:611:700:710:800:844:855:866:877:880:881:888:900&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;Toll Free&quot;,&quot;Other&quot;
 
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Activity_Count__c</fullName>
        <label>Total_Activity_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touch_Points__c</fullName>
        <description>How many touch points by current lead owner</description>
        <label>Touch Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Profile_Views__c</fullName>
        <label>Unique Profile Views</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_Date__c</fullName>
        <label>Warm Pass Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Pass by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Pass to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_of_Founding__c</fullName>
        <label>Year of Founding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoHo_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoHo Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Owner_Email__c</fullName>
        <label>ZoHo Owner Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>converted_from_lead_helper__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Maps to Account field of the same name to allow validation rule to restrict Account creation</description>
        <label>converted from lead helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_My_Open_Leads</fullName>
        <columns>Pro_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>All My Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Pro_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <group>Admins_Ops</group>
            <role>Data_Operations</role>
            <role>Director_BD_Sales</role>
            <role>Executives</role>
            <role>Marketing</role>
            <role>Regional_Sales_Manager</role>
            <role>Revenue_Manager_1</role>
            <role>Revenue_Manager_10</role>
            <role>Revenue_Manager_11</role>
            <role>Revenue_Manager_12</role>
            <role>Revenue_Manager_2</role>
            <role>Revenue_Manager_3</role>
            <role>Revenue_Manager_4</role>
            <role>Revenue_Manager_5</role>
            <role>Revenue_Manager_6</role>
            <role>Revenue_Manager_7</role>
            <role>Revenue_Manager_8</role>
            <role>Revenue_Manager_9</role>
            <role>VP_Director_Sales</role>
            <role>VP_Inside_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atlanta_Sandy_Springs_Marietta_MSA_Lead</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>LEAD.COMPANY</columns>
        <columns>Pro_Type__c</columns>
        <columns>MSA__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Pro_Type__c</field>
            <operation>contains</operation>
            <value>general,hvac,handy,elect,paint,plumb,landscapers,home,roofers,flooring</value>
        </filters>
        <filters>
            <field>Pro_Type__c</field>
            <operation>contains</operation>
            <value>window c,remodel,gutter</value>
        </filters>
        <label>Atlanta-Sandy Springs-Marietta MSA</label>
        <queue>Atlanta_Sandy_Springs_Marietta_MSA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Audrey_s_Indy_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Pro_Type__c</field>
            <operation>equals</operation>
            <value>Electricians</value>
        </filters>
        <label>Audrey&apos;s Indy View</label>
        <queue>Indianapolis_MSA_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Austin_Round_Rock_TX_MSA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Austin-Round Rock, TX Metro Area</label>
        <queue>Austin_Round_Rock_TX_MSA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BD_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>BD Queue</label>
        <queue>BD_Queue</queue>
        <sharedTo>
            <group>Admins_Ops</group>
            <group>Mid_Market</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BD_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CITY</field>
            <operation>greaterOrEqual</operation>
            <value>5</value>
        </filters>
        <label>BD leads</label>
        <sharedTo>
            <group>Admins_Ops</group>
            <group>Mid_Market</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Baltimore_G_ed_Leads</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Homeowner_Contacts__c</columns>
        <columns>Profile_Views__c</columns>
        <columns>Pro_Type__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>County2__c</columns>
        <columns>BBB_Rating__c</columns>
        <columns>Distance_from_Lowe_s_Miles__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>New,Open,Attempted</value>
        </filters>
        <filters>
            <field>Pro_Type__c</field>
            <operation>contains</operation>
            <value>flooring,handy,HVAC,landscapers,window Elect,Plumb,roof,paint</value>
        </filters>
        <filters>
            <field>LEAD.URL</field>
            <operation>contains</operation>
            <value>.</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Lead_Grade__c</field>
            <operation>contains</operation>
            <value>A,B,C,D</value>
        </filters>
        <filters>
            <field>BBB_Rating__c</field>
            <operation>contains</operation>
            <value>A,B</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notContain</operation>
            <value>Lowe&apos;s</value>
        </filters>
        <label>Baltimore G&apos;ed Leads</label>
        <queue>Baltimore_Towson_MD_MSA</queue>
        <sharedTo>
            <roleAndSubordinates>Local_Market_Specialists_2</roleAndSubordinates>
            <roleAndSubordinates>Revenue_Manager_6</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Baltimore_Towson_MD_MSA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Baltimore-Towson, MD MSA</label>
        <queue>Baltimore_Towson_MD_MSA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Birmingham_Hoover_AL_Metro_Area_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Birmingham-Hoover, AL Metro Area</label>
        <queue>Birmingham_Hoover_AL_Metro_Area</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bodine_s_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Bodine&apos;s Queue</label>
        <queue>Bodine_s_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Boston_Cambridge_Newton_MA_NH_Metro_Are_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Boston-Cambridge-Newton, MA-NH Metro Are</label>
        <queue>Boston_Cambridge_Newton_MA_NH_Metro_Are</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bridgeport_Stamford_Norwalk_CT_Metro_Ar_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Bridgeport-Stamford-Norwalk, CT Metro Ar</label>
        <queue>Bridgeport_Stamford_Norwalk_CT_Metro_Ar</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CamAndrews_Boston_Cambridge_G_ed_Leads</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Homeowner_Contacts__c</columns>
        <columns>Profile_Views__c</columns>
        <columns>Pro_Type__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>County2__c</columns>
        <columns>BBB_Rating__c</columns>
        <columns>Distance_from_Lowe_s_Miles__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>New,Open,Attempted</value>
        </filters>
        <filters>
            <field>Pro_Type__c</field>
            <operation>contains</operation>
            <value>flooring,handy,HVAC,landscapers,window Elect,Plumb,roof,paint</value>
        </filters>
        <filters>
            <field>LEAD.URL</field>
            <operation>contains</operation>
            <value>.</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Lead_Grade__c</field>
            <operation>contains</operation>
            <value>A,B,C,D</value>
        </filters>
        <filters>
            <field>BBB_Rating__c</field>
            <operation>contains</operation>
            <value>A,B</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notContain</operation>
            <value>Lowe&apos;s</value>
        </filters>
        <label>Boston G&apos;ed Leads</label>
        <queue>Boston_Cambridge_Newton_MA_NH_Metro_Are</queue>
        <sharedTo>
            <role>Local_Market_Specialists_2</role>
            <roleAndSubordinates>Revenue_Manager_6</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CamAndrews_San_Antonio_G_ed_Leads</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6) AND 7</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Homeowner_Contacts__c</columns>
        <columns>Profile_Views__c</columns>
        <columns>Pro_Type__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMPLOYEES</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>County2__c</columns>
        <columns>BBB_Rating__c</columns>
        <columns>Distance_from_Lowe_s_Miles__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>New,Open,Attempted</value>
        </filters>
        <filters>
            <field>Pro_Type__c</field>
            <operation>contains</operation>
            <value>flooring,handy,HVAC,landscapers,window Elect,Plumb,roof,paint</value>
        </filters>
        <filters>
            <field>LEAD.URL</field>
            <operation>contains</operation>
            <value>.</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Lead_Grade__c</field>
            <operation>contains</operation>
            <value>A,B,C,D</value>
        </filters>
        <filters>
            <field>BBB_Rating__c</field>
            <operation>contains</operation>
            <value>A,B</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notContain</operation>
            <value>Lowe&apos;s</value>
        </filters>
        <label>San Antonio G&apos;ed Leads</label>
        <queue>San_Antonio_MSA</queue>
        <sharedTo>
            <role>Local_Market_Specialists_2</role>
            <roleAndSubordinates>Revenue_Manager_6</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bad_Phone_Number_Detail_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( Bad_Lead_Detail__c , &quot;Bad / Wrong Number&quot;),
 ISPICKVAL(  Bad_Number_Detail__c  ,&quot;&quot; ),
NOT( 
OR(($Profile.Id = &quot;00ej0000000uw9O&quot;), /*System Administrator*/ 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
))</errorConditionFormula>
        <errorDisplayField>Bad_Number_Detail__c</errorDisplayField>
        <errorMessage>Whoa there!  You&apos;ve labeled this a &quot;Bad Phone Number.&quot; We need more detail. So pick a reason and let us know why they it&apos;s a bad number!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Key_Required</fullName>
        <active>true</active>
        <description>Company Key is required for Lead Creation</description>
        <errorConditionFormula>AND(
ISNEW(),
ISBLANK (Porch_com_Company_Key_ID__c),
$Profile.Id = &quot;00ej00000016H2H&quot;)</errorConditionFormula>
        <errorDisplayField>Porch_com_Company_Key_ID__c</errorDisplayField>
        <errorMessage>You cannot create a lead without a company key, please create the profile in back porch before creating in salesforce.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Fields_Required_at_Lead_Conversion</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  IsConverted = TRUE,
OR(
 ISBLANK( Company ),
 ISBLANK(TEXT( Pro_Type__c )),
 ISBLANK( Phone ),
 ISBLANK( State ),
 ISBLANK( County__c ),
 ISBLANK( PostalCode )),
NOT( 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/
)
)</errorConditionFormula>
        <errorMessage>Before converting a lead you must complete the following fields:
Company Name, Pro Type, Phone, State, County, Zip</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Owner_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
$Profile.Name =&quot;Local Market Specialist / Acquisition Team* / Transaction&quot;,
NOT(
    OR(
      LEFT(PRIORVALUE(OwnerId), 3) = &apos;00G&apos;, 
      PRIORVALUE(OwnerId)=$User.Id
       )
    )
)</errorConditionFormula>
        <errorMessage>Oops! You can only change the lead owner if it&apos;s owned by a Queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Status_Detail_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   OR(
 ISPICKVAL(Status, &quot;Bad Lead&quot;),
 ISPICKVAL(Status, &quot;Not Qualified&quot;),
 ISPICKVAL(Status, &quot;Follow Up&quot;),
 ISPICKVAL(Status, &quot;Not Interested&quot;),
 ISPICKVAL(Status, &quot;Untargeted Area&quot;)),
 ISPICKVAL( Bad_Lead_Detail__c,&quot;&quot;),
NOT( 
OR(($Profile.Id = &quot;00ej0000000uw9O&quot;), /*System Administrator*/ 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
))</errorConditionFormula>
        <errorDisplayField>Bad_Lead_Detail__c</errorDisplayField>
        <errorMessage>Whoa there!  We need more detail! Please fill out the &quot;Lead Status Detail&quot; page to help us understand more about this lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Warm_Pass_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
   ISCHANGED(Warm_Pass_by__c ),
   NOT(ISBLANK(PRIORVALUE( Warm_Pass_by__c ))), 
   $Profile.Id &lt;&gt; &quot;00ej0000000uw9O&quot;, /*System Administrator*/ 
   $Profile.Id &lt;&gt; &quot;00ej00000016bYW&quot; /*System Administrator No Password*/ 
)</errorConditionFormula>
        <errorDisplayField>Warm_Pass_by__c</errorDisplayField>
        <errorMessage>Oops! Warm Pass field has already been populated.  If you need this changed, please notify the admin team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Interested_Detail_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Status, &quot;Not Interested&quot;),
 ISPICKVAL( Not_Interested_Detail__c ,&quot;&quot; ),
NOT( 
OR(($Profile.Id = &quot;00ej0000000uw9O&quot;), /*System Administrator*/ 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
))</errorConditionFormula>
        <errorDisplayField>Not_Interested_Detail__c</errorDisplayField>
        <errorMessage>Whoa there!  You&apos;ve labeled this a &quot;Not Interested.&quot; We need more detail. So pick a reason and let us know why they aren&apos;t interested!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Detail_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(  Bad_Lead_Detail__c  ,&quot;Other&quot;), 
ISBLANK( Other_Detail__c), 
NOT( 
OR(($Profile.Id = &quot;00ej0000000uw9O&quot;), /*System Administrator*/ 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
))</errorConditionFormula>
        <errorDisplayField>Other_Detail__c</errorDisplayField>
        <errorMessage>Other Alert! You&apos;ve picked the uber-descriptive &quot;Other&quot; as a substatus for this account. Let us know what you mean by that!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualifed_Status_Only_At_Lead_Conversion</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  IsConverted = FALSE,
  ISPICKVAL(Status,&quot;Qualified&quot;),
NOT( 
($Profile.Id = &quot;00ej00000016bYW&quot;) /*System Administrator No Password*/ 
) 
)</errorConditionFormula>
        <errorMessage>The Qualified status can only be selected when converting a lead.  Please use the convert button instead.</errorMessage>
    </validationRules>
</CustomObject>